fix: overflow hidden

--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,13 @@
 .navbar {
     background-color: #1c1c1e;  /* Dark gray */
-    padding: 15px 20px;
+    padding: 20px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .logo {
